--- a/Final/.project
+++ b/Final/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Final</name>
+	<name>csc202</name>
 	<comment></comment>
 	<projects>
 	</projects>
